# Dev_Cli

./: CHANGELOG.md  Cargo.toml  README.md  catalog-info.yaml  cog.toml  nx.json  package-lock.json  package.json  sonar-project.properties
.github/workflows/: build-release.yml  rust-audit.yml  rust-clippy.yml  rust-coverage.yml  rust-sbom.yml  rust-sonar.yml
apps/dev_cli/: Cargo.toml  dev_cli.cdx.json  project.json
apps/dev_cli/src/: dev-cli.art  level.rs  main.rs
apps/dev_cli/src/code/: mod.rs
apps/dev_cli/src/shell/: mod.rs
apps/dev_cli/src/workspace/: get.rs  get_container.rs  list.rs  mod.rs  restart.rs  start.rs  stop.rs
apps/sandbox/: Cargo.toml  project.json  sandbox.cdx.json
apps/sandbox/src/: main.rs
libs/crd/: Cargo.toml  crd.cdx.json  readme.md
libs/crd/src/: dev_work_space.rs  dev_work_space_template.rs  lib.rs
libs/devfile/: Cargo.toml  devfile.cdx.json  project.json  readme.md
libs/devfile/src/: lib.rs
libs/devfile/src/generator/: context.rs  generate_context.rs  mod.rs  projects.rs
libs/devfile/src/lifecycle/: ask_if_pod_should_up.rs  find_pod_by_ws_name.rs  mod.rs  start_stop.rs  wait_for_status.rs
libs/devfile/src/validator/: devfile.V200.json  devfile.V210.json  devfile.V220.json  devfile.V221.json  devfile.V222.json  devfile.V230.json  devfile_v210.rs  devfile_v220.rs  devfile_v221.rs  devfile_v222.rs  devfile_v230.rs  mod.rs  readme.md  version.rs
libs/helper/: Cargo.toml  helper.cdx.json  project.json
libs/helper/src/: base_info.rs  error.rs  lib.rs  select_pod.rs
libs/shell/: Cargo.toml  project.json  shell.cdx.json
libs/shell/src/: create_attach_process.rs  lib.rs  shell_size.rs  start_it_shell.rs
libs/tool_tracing/: Cargo.toml  tool_tracing.cdx.json
libs/tool_tracing/src/: init.rs
libs/vscode/: Cargo.toml  project.json  vscode.cdx.json
libs/vscode/src/: error.rs  extensions.rs  healthcheck.rs  lib.rs  open_code.rs
libs/workspaces/: Cargo.toml  project.json
