
[workspace]
resolver = '2'
members = [
	'libs/crd',
	'libs/devfile',
	'libs/helper',
	'libs/vscode',
	'libs/tool_tracing',
	'apps/sandbox',
	'apps/dev_cli',
	'libs/shell',
]

[workspace.dependencies]
k8s-openapi = { version = '0.24', features = ['latest', 'schemars'] }
kube = { version = '0.98', features = ['derive', 'jsonpatch', 'ws'] }
tokio = { version = '1', features = ['macros', 'rt-multi-thread', 'io-std'] }
tracing = '0.1'
serde = '1.0.217'
tokio-util = "0.7"

[profile.release]
lto = true
