[package]
name = "dev_cli"
version = "0.1.0"
edition = "2021"
default-run = "dev_cli"


[dependencies]
helper = { path = "../../libs/helper" }
tool_tracing = { path = "../../libs/tool_tracing" }
devfile = { path = "../../libs/devfile" }
vscode = { path = "../../libs/vscode" }
crd = { path = "../../libs/crd" }
tokio = { workspace = true }
tracing = { workspace = true }
k8s-openapi = { workspace = true }
kube = { workspace = true }
clap = { version = "4.5.23", features = ["derive"] }
clap_complete = "4.5.40"
serde = "1.0.217"
serde_yaml = "0.9.34"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
