[package]
name = "dev_cli"
version = "2.2.0"
edition = "2021"
default-run = "dev_cli"


[dependencies]
helper = { path = "../../libs/helper" }
tool_tracing = { path = "../../libs/tool_tracing" }
devfile = { path = "../../libs/devfile" }
vscode = { path = "../../libs/vscode" }
crd = { path = "../../libs/crd" }
shell = { path = "../../libs/shell" }
tokio = { workspace = true }
tracing = { workspace = true }
k8s-openapi = { workspace = true }
kube = { workspace = true }
clap = { version = "4.5.23", features = ["derive"] }
clap_complete = "4.5.40"
serde = { workspace = true }
serde_yaml = "0.9.34"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
