[package]
name = "sandbox"
version = "2.2.1"
edition = "2021"


[dependencies]
helper = { path = "../../libs/helper" }
tool_tracing = { path = "../../libs/tool_tracing" }
devfile = { path = "../../libs/devfile" }
tokio = { workspace = true }
tracing = { workspace = true }
k8s-openapi = { workspace = true }
kube = { workspace = true }
vscode = { path = "../../libs/vscode" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
