[package]
name = "crd"
version = "0.1.0"
edition = "2021"

[dependencies]
k8s-openapi = { version = "0.23", features = ["latest", "schemars"] }
kube = { version = "0.95", features = ["derive", "jsonpatch"] }
schemars = "0.8"
serde = "1.0.210"
serde_json = "1.0.128"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
