[package]
name = "crd"
version = "2.2.1"
edition = "2021"

[dependencies]
k8s-openapi = { workspace = true }
kube = { workspace = true }
schemars = "0.8"
serde = { workspace = true }
serde_json = "1.0.134"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
