[package]
name = "devfile"
version = "0.1.1"
edition = "2021"

[dependencies]
k8s-openapi = { workspace = true }
kube = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }

crd = { path = "../crd" }
helper = { path = "../helper" }

jsonschema = "0.28"
serde = "1.0"
serde_json = "1.0"
serde_yaml = "0.9"
json-patch = "3.0.1"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
