[package]
name = "helper"
version = "0.1.0"
edition = "2021"

[dependencies]
k8s-openapi = { version = "0.23", features = ["latest", "schemars"] }
kube = { version = "0.95", features = ["derive", "jsonpatch"] }
tracing = "0.1.40"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
