[package]
name = "helper"
version = "2.2.0"
edition = "2021"

[dependencies]
k8s-openapi = { workspace = true }
kube = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
crd = { path = "../crd" }
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
