[package]
name = "shell"
version = "2.2.1"
edition = "2021"

[dependencies]
kube = { workspace = true }
k8s-openapi = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
helper = { path = "../helper" }
crossterm = "0.28.1"
anyhow = "1.0.95"
futures = "0.3.31"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
