[package]
name = "tool_tracing"
version = "2.2.1"
edition = "2021"

[dependencies]
serde = "1.0"
serde_repr = "0.1"
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = [
    "registry",
    "env-filter",
    "time",
] }
time = "0.3"
tracing-bunyan-formatter = "0.3"
opentelemetry = "0.27"
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.27", features = ["grpc-tonic"] }
tracing-opentelemetry = "0.28"
serde_json = "1.0"
tokio = { workspace = true }
tonic = { version = "*" }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(coverage,coverage_nightly)',
] }
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
