[package]
name = "vscode"
version = "0.1.1"
edition = "2021"

[dependencies]
http = "1.1"
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["tokio"] }
tokio = "1.40"
tokio-util = "0.7"
tracing = "0.1"
helper = { path = "../helper" }
kube = { workspace = true }
k8s-openapi = { workspace = true }
hyper = { version = "1.4", features = ["client", "http1"] }
serde = "1.0.210"
url = "2.5.2"
json-patch = "1.2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
